--- a/.gitignore
+++ b/.gitignore
@@ -20,3 +20,4 @@ Acessorio.Util/obj/Debug/net5.0/Acessorio.Util.csproj.CoreCompileInputs.cache
 Acessorio.Util/obj/Debug/net5.0/Acessorio.Util.dll
 Acessorio.Util/obj/Debug/net5.0/Acessorio.Util.pdb
 Acessorio.Util/obj/Debug/net5.0/ref/Acessorio.Util.dll
+.vs/Acessorio/DesignTimeBuild/.dtbcache.v2
