--- a/.gitignore
+++ b/.gitignore
@@ -21,3 +21,4 @@ Acessorio.Util/obj/Debug/net5.0/Acessorio.Util.dll
 Acessorio.Util/obj/Debug/net5.0/Acessorio.Util.pdb
 Acessorio.Util/obj/Debug/net5.0/ref/Acessorio.Util.dll
 .vs/Acessorio/DesignTimeBuild/.dtbcache.v2
+*.cache
