--- a/.gitignore
+++ b/.gitignore
@@ -22,3 +22,4 @@ Acessorio.Util/obj/Debug/net5.0/Acessorio.Util.pdb
 Acessorio.Util/obj/Debug/net5.0/ref/Acessorio.Util.dll
 .vs/Acessorio/DesignTimeBuild/.dtbcache.v2
 *.cache
+.editorconfig
